Perkin-UAT/force-app/main/default/objects/Batch_Contract_Renewal_Settings__c/Batch_Contract_Renewal_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SC-733 Added by PwC as configuration to ContractRenewalBatch</description>
    <label>Batch Contract Renewal Settings</label>
</CustomObject>