Perkin-UAT/force-app/main/default/objects/Batch_Contract_Renewal_Settings__c/fields/fxPKICountryISOAlpha2__c.field-meta.xml
<CustomField>
    <fullName>fxPKICountryISOAlpha2__c</fullName>
    <description>SC-733 Filter renewal contracts by related Account PKI Country ISO Alpha-2</description>
    <label>fx PKI Country ISO Alpha-2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>