Perkin-UAT/force-app/main/default/objects/Batch_Contract_Renewal_Settings__c/fields/fxPKIGlobalTerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKIGlobalTerritory__c</fullName>
    <description>SC-733 Filter renewal contracts by related Account PKI Global Territory</description>
    <label>fx PKI Global Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>