Perkin-UAT/force-app/main/default/objects/Batch_Contract_Renewal_Settings__c/fields/fxPKISubTerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKISubTerritory__c</fullName>
    <description>SC-733 Filter renewal contracts by related Account PKI Sub Territory</description>
    <label>fx PKI Sub Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>