Perkin-UAT/force-app/main/default/objects/Batch_Contract_Renewal_Settings__c/fields/fxPKISuperTerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKISuperTerritory__c</fullName>
    <description>SC-733 Filter renewal contracts by related Account PKI Super Territory</description>
    <label>fx PKI Super Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>