Perkin-UAT/force-app/main/default/objects/Batch_Contract_Renewal_Settings__c/fields/fxPKITerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKITerritory__c</fullName>
    <description>SC-733 Filter renewal contracts by related Account PKI Territory</description>
    <label>fx PKI Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>