Perkin-UAT/force-app/main/default/objects/Batch_Contract_Renewal_Settings__c/fields/In_Advance_Days__c.field-meta.xml
<CustomField>
    <fullName>In_Advance_Days__c</fullName>
    <description>Number of days in advance contracts are processed for renewal.</description>
    <label>In Advance Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>