Perkin-UAT/force-app/main/default/objects/Batch_Contract_Renewal_Settings__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Period contracts are processed for renewal.</description>
    <label>Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>